# oop-semester-project

./: .gitignore  README.md  pom.xml
cpp/: CMakeLists.txt
cpp/include/: audio_lib.h
cpp/src/: audio_lib.cpp
src/main/java/app/: App.java  AudioLib.java  Player.java
